data/derived/fa15/progs/unify/prog3918.ml.out
Characters 21-28:
  let c1 () = failwith (6,3,5);;
                       ^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type string
